temporary set only one model

--- a/run_local.ipynb
+++ b/run_local.ipynb
@@ -68,8 +68,8 @@
     }
    ],
    "source": [
-    "payload1 = {'message': 'Tell me a joke?',\n",
-    "           'model_id':\"google/gemma-7b-it\"   \n",
+    "payload1 = {\"message\": \"Tell me a joke?\",\n",
+    "           \"model_id\":\"google/gemma-7b-it\"   \n",
     "}\n",
     "\n",
     "# Send the first POST request\n",
