add fastapi need to add 1.feedback 2.daemon 3.benchmark traffic 4.limiter

--- a/run_local.ipynb
+++ b/run_local.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,19 +10,20 @@
     "import json\n",
     "\n",
     "# Define the URL of your Flask endpoint\n",
-    "url = 'http://127.0.0.1:5000/chat'"
+    "url = 'http://127.0.0.1:8502/chat'\n",
+    "f_url = 'http://127.0.0.1:8000/chat'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Response : {'error': 'Invalid request, \"message\" key is missing'}\n"
+      "Response : {'response': 'Invalid request, \"message\" key is missing'}\n"
      ]
     }
    ],
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Response 1: {'response': \"Sure, I'd be happy to tell you a joke. Can you give me a topic for the joke you want me to tell?\"}\n"
+      "Response 1: {'response': \"Here's one:\\n\\nWhy don't eggs go to school?\\n\\nBecause they'd crack under the pressure!\\n\\nHope that made you crack a smile!\"}\n"
      ]
     }
    ],
@@ -79,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Response 2: {'response': 'Sorry, I do not have the ability to understand or speak French. Please provide me with the question in English and I will do my best to answer.'}\n"
+      "Response 2: {'response': \"Here's one in French:\\n\\nPourquoi les œufs ne vont-ils pas à l'école?\\n\\nParce qu'ils craqueraient sous la pression!\\n\\nEspère que cela vous a fait sourire!\"}\n"
      ]
     }
    ],
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Response 3: {'response': \"Here's another one:\\n\\nWhy don't scientists trust atoms?\\n\\nBecause they make up everything!\"}\n"
+      "Response 3: {'response': \"Here's one:\\n\\nWhy did the scarecrow win an award?\\n\\nBecause he was outstanding in his field!\"}\n"
      ]
     }
    ],
