--- a/run_local.ipynb
+++ b/run_local.ipynb
@@ -23,6 +23,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Response : {'detail': [{'type': 'missing', 'loc': ['body', 'user_id'], 'msg': 'Field required', 'input': {}}, {'type': 'missing', 'loc': ['body', 'history'], 'msg': 'Field required', 'input': {}}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test incorrect json\n",
+    "payload = {   \n",
+    "}\n",
+    "\n",
+    "# Send the second POST request\n",
+    "response = requests.post(f_url, json=payload)\n",
+    "print('Response :', response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response : {'user_id': '123', 'response': 'Why did the scarecrow win an award? Because he was outstanding in his field!'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "payload = { \n",
+    "'user_id': '123',\n",
+    "'history' :[{'role': 'user', 'content': \"tell me a joke\"}]  \n",
+    "}\n",
+    "\n",
+    "# Send the second POST request\n",
+    "response = requests.post(f_url, json=payload)\n",
+    "print('Response :', response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Response : {'response': 'Invalid request, \"message\" key is missing'}\n"
      ]
     }
