--- a/run_local.ipynb
+++ b/run_local.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,15 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "session_id : 95fc4d7d-fdb8-4f42-be0f-2cd14dc5538d\n",
-      "session_id_2 : eef9df2e-d1fb-4700-b0c4-23e3daa801e5\n"
+      "session_id : ef57bee4-ed97-42c0-a4ff-e6f497efafd7\n",
+      "session_id_2 : f58f3149-7067-49af-985a-909e6493ee06\n"
      ]
     }
    ],
@@ -241,16 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I see what you're getting at! You're looking for more, right?\n",
-      "\n",
-      "\"Encore\" is a French word that means \"again\" or \"once more\". It's often used to ask for an encore performance, especially in music or theater. If you're looking for more of something, I'd be happy to help you find it! What are you looking for an encore of?\n"
+      "<Response [200]>\n"
      ]
     }
    ],
@@ -259,18 +257,53 @@
     "payload = { \n",
     "    'user_id': '123',\n",
     "    'session_id': session_id,\n",
-    "    'message': \"encore\"  \n",
+    "    'message': \"python example\"  \n",
     "}\n",
     "\n",
-    "response = requests.post(stream_chat_url, json=payload)\n",
-    "for chunk in response.iter_content(chunk_size=None):\n",
-    "    print(chunk.decode('utf-8'))"
+    "print(requests.post(stream_chat_url, json=payload))\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's a simple Python example:\n",
+      "```\n",
+      "# Print Hello World\n",
+      "print(\"Hello, World!\")\n",
+      "# Ask for user's name\n",
+      "name = input(\"What is your name? \")\n",
+      "# Greet the user\n",
+      "print(\"Hello, \" + name + \"!\")\n",
+      "# Ask for a number\n",
+      "num = int(input(\"Enter a number: \"))\n",
+      "# Print the square of the number\n",
+      "print(\"The square of \" + str(num) + \" is \" + str(num ** 2))\n",
+      "```\n",
+      "This example includes:\n",
+      "1. Printing a message to the console\n",
+      "2. Asking the user for their name and storing it in a variable\n",
+      "3. Printing a personalized greeting\n",
+      "4. Asking the user for a number and storing it in a variable\n",
+      "5. Calculating and printing the square of the number\n",
+      "You can run this code in a Python interpreter or save it to a file and run it as a script.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with requests.post(stream_chat_url, json=payload,stream=True) as response:\n",
+    "    if response.status_code == 200:\n",
+    "        for line in response.iter_lines():\n",
+    "            if line:\n",
+    "                print(line.decode('utf-8'))\n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code}\")"
+   ]
   }
  ],
  "metadata": {
